// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsonb_jsonpath.sql > line 1 1`] = `
[
  "select jsonb '{"a": 12}' @? '$'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 13,
                              "sval": {
                                "sval": "{"a": 12}",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "jsonb",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 25,
                      "name": [
                        {
                          "String": {
                            "sval": "@?",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 28,
                          "sval": {
                            "sval": "$",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 42 1`] = `
[
  "select jsonb_path_exists('[{"a": 1}, {"a": 2}, 3]', 'lax $[*].a', silent => false)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "[{"a": 1}, {"a": 2}, 3]",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 52,
                            "sval": {
                              "sval": "lax $[*].a",
                            },
                          },
                        },
                        {
                          "NamedArgExpr": {
                            "arg": {
                              "A_Const": {
                                "boolval": {},
                                "location": 76,
                              },
                            },
                            "argnumber": -1,
                            "location": 66,
                            "name": "silent",
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_exists",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 47 1`] = `
[
  "select jsonb_path_query('1', 'lax $.a')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 24,
                            "sval": {
                              "sval": "1",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 29,
                            "sval": {
                              "sval": "lax $.a",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_query",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 99 1`] = `
[
  "select * from jsonb_path_query('{"a": 10}', '$')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "location": 31,
                                    "sval": {
                                      "sval": "{"a": 10}",
                                    },
                                  },
                                },
                                {
                                  "A_Const": {
                                    "location": 44,
                                    "sval": {
                                      "sval": "$",
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "jsonb_path_query",
                                  },
                                },
                              ],
                              "location": 14,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 166 1`] = `
[
  "select
	x, y,
	jsonb_path_query(
		'[true, false, null]',
		'$[*] ? (@ == true  &&  ($x == true && $y == true) ||
				 @ == false && !($x == true && $y == true) ||
				 @ == null  &&  ($x == true && $y == true) is unknown)',
		jsonb_build_object('x', x, 'y', y)
	) as "x && y"
from
	(values (jsonb 'true'), ('false'), ('"null"')) x(x),
	(values (jsonb 'true'), ('false'), ('"null"')) y(y)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "x",
                    "colnames": [
                      {
                        "String": {
                          "sval": "x",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 298,
                                      "sval": {
                                        "sval": "true",
                                      },
                                    },
                                  },
                                  "location": -1,
                                  "typeName": {
                                    "location": 292,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "jsonb",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 308,
                                  "sval": {
                                    "sval": "false",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 319,
                                  "sval": {
                                    "sval": ""null"",
                                  },
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "y",
                    "colnames": [
                      {
                        "String": {
                          "sval": "y",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 352,
                                      "sval": {
                                        "sval": "true",
                                      },
                                    },
                                  },
                                  "location": -1,
                                  "typeName": {
                                    "location": 346,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "jsonb",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 362,
                                  "sval": {
                                    "sval": "false",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 373,
                                  "sval": {
                                    "sval": ""null"",
                                  },
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "x",
                          },
                        },
                      ],
                      "location": 8,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 11,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "y",
                          },
                        },
                      ],
                      "location": 11,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 15,
                  "name": "x && y",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 35,
                            "sval": {
                              "sval": "[true, false, null]",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 60,
                            "sval": {
                              "sval": "$[*] ? (@ == true  &&  ($x == true && $y == true) ||
				 @ == false && !($x == true && $y == true) ||
				 @ == null  &&  ($x == true && $y == true) is unknown)",
                            },
                          },
                        },
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 246,
                                  "sval": {
                                    "sval": "x",
                                  },
                                },
                              },
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "x",
                                      },
                                    },
                                  ],
                                  "location": 251,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 254,
                                  "sval": {
                                    "sval": "y",
                                  },
                                },
                              },
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "y",
                                      },
                                    },
                                  ],
                                  "location": 259,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "jsonb_build_object",
                                },
                              },
                            ],
                            "location": 227,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_query",
                          },
                        },
                      ],
                      "location": 15,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 250 1`] = `
[
  "select jsonb '2' @@ '$ > 1'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 13,
                              "sval": {
                                "sval": "2",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "jsonb",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 17,
                      "name": [
                        {
                          "String": {
                            "sval": "@@",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 20,
                          "sval": {
                            "sval": "$ > 1",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 261 1`] = `
[
  "select jsonb_path_match('[{"a": 1}, {"a": 2}, 3]', 'lax exists($[*].a)', silent => false)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 24,
                            "sval": {
                              "sval": "[{"a": 1}, {"a": 2}, 3]",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 51,
                            "sval": {
                              "sval": "lax exists($[*].a)",
                            },
                          },
                        },
                        {
                          "NamedArgExpr": {
                            "arg": {
                              "A_Const": {
                                "boolval": {},
                                "location": 83,
                              },
                            },
                            "argnumber": -1,
                            "location": 73,
                            "name": "silent",
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_match",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 375 1`] = `
[
  "set time zone '+00'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 14,
                  "sval": {
                    "sval": "+00",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "timezone",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 405 1`] = `
[
  "set time zone default",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_SET_DEFAULT",
            "name": "timezone",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 541 1`] = `
[
  "SELECT jsonb_path_query_array('[{"a": 1}, {"a": 2}, {}]', 'strict $[*].a')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "[{"a": 1}, {"a": 2}, {}]",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 58,
                            "sval": {
                              "sval": "strict $[*].a",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_query_array",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 548 1`] = `
[
  "SELECT jsonb_path_query_first('[{"a": 1}, {"a": 2}, {}]', 'strict $[*].a')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "[{"a": 1}, {"a": 2}, {}]",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 58,
                            "sval": {
                              "sval": "strict $[*].a",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_query_first",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`jsonb_jsonpath.sql > line 585 1`] = `
[
  "WITH str(j, num) AS
(
	SELECT jsonb_build_object('s', s), num
	FROM unnest('{"", "a", "ab", "abc", "abcd", "b", "A", "AB", "ABC", "ABc", "ABcD", "B"}'::text[]) WITH ORDINALITY AS a(s, num)
)
SELECT
	s1.j, s2.j,
	jsonb_path_query_first(s1.j, '$.s < $s', vars => s2.j) lt,
	jsonb_path_query_first(s1.j, '$.s <= $s', vars => s2.j) le,
	jsonb_path_query_first(s1.j, '$.s == $s', vars => s2.j) eq,
	jsonb_path_query_first(s1.j, '$.s >= $s', vars => s2.j) ge,
	jsonb_path_query_first(s1.j, '$.s > $s', vars => s2.j) gt
FROM str s1, str s2
ORDER BY s1.num, s2.num",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "s1",
                  },
                  "inh": true,
                  "location": 518,
                  "relname": "str",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "s2",
                  },
                  "inh": true,
                  "location": 526,
                  "relname": "str",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "s1",
                          },
                        },
                        {
                          "String": {
                            "sval": "num",
                          },
                        },
                      ],
                      "location": 542,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "s2",
                          },
                        },
                        {
                          "String": {
                            "sval": "num",
                          },
                        },
                      ],
                      "location": 550,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 199,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "s1",
                          },
                        },
                        {
                          "String": {
                            "sval": "j",
                          },
                        },
                      ],
                      "location": 199,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 205,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "s2",
                          },
                        },
                        {
                          "String": {
                            "sval": "j",
                          },
                        },
                      ],
                      "location": 205,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 212,
                  "name": "lt",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "s1",
                                },
                              },
                              {
                                "String": {
                                  "sval": "j",
                                },
                              },
                            ],
                            "location": 235,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 241,
                            "sval": {
                              "sval": "$.s < $s",
                            },
                          },
                        },
                        {
                          "NamedArgExpr": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "s2",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "j",
                                    },
                                  },
                                ],
                                "location": 261,
                              },
                            },
                            "argnumber": -1,
                            "location": 253,
                            "name": "vars",
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_query_first",
                          },
                        },
                      ],
                      "location": 212,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 272,
                  "name": "le",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "s1",
                                },
                              },
                              {
                                "String": {
                                  "sval": "j",
                                },
                              },
                            ],
                            "location": 295,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 301,
                            "sval": {
                              "sval": "$.s <= $s",
                            },
                          },
                        },
                        {
                          "NamedArgExpr": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "s2",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "j",
                                    },
                                  },
                                ],
                                "location": 322,
                              },
                            },
                            "argnumber": -1,
                            "location": 314,
                            "name": "vars",
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_query_first",
                          },
                        },
                      ],
                      "location": 272,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 333,
                  "name": "eq",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "s1",
                                },
                              },
                              {
                                "String": {
                                  "sval": "j",
                                },
                              },
                            ],
                            "location": 356,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 362,
                            "sval": {
                              "sval": "$.s == $s",
                            },
                          },
                        },
                        {
                          "NamedArgExpr": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "s2",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "j",
                                    },
                                  },
                                ],
                                "location": 383,
                              },
                            },
                            "argnumber": -1,
                            "location": 375,
                            "name": "vars",
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_query_first",
                          },
                        },
                      ],
                      "location": 333,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 394,
                  "name": "ge",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "s1",
                                },
                              },
                              {
                                "String": {
                                  "sval": "j",
                                },
                              },
                            ],
                            "location": 417,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 423,
                            "sval": {
                              "sval": "$.s >= $s",
                            },
                          },
                        },
                        {
                          "NamedArgExpr": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "s2",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "j",
                                    },
                                  },
                                ],
                                "location": 444,
                              },
                            },
                            "argnumber": -1,
                            "location": 436,
                            "name": "vars",
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_query_first",
                          },
                        },
                      ],
                      "location": 394,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 455,
                  "name": "gt",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "s1",
                                },
                              },
                              {
                                "String": {
                                  "sval": "j",
                                },
                              },
                            ],
                            "location": 478,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 484,
                            "sval": {
                              "sval": "$.s > $s",
                            },
                          },
                        },
                        {
                          "NamedArgExpr": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "s2",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "j",
                                    },
                                  },
                                ],
                                "location": 504,
                              },
                            },
                            "argnumber": -1,
                            "location": 496,
                            "name": "vars",
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "jsonb_path_query_first",
                          },
                        },
                      ],
                      "location": 455,
                    },
                  },
                },
              },
            ],
            "withClause": {
              "ctes": [
                {
                  "CommonTableExpr": {
                    "aliascolnames": [
                      {
                        "String": {
                          "sval": "j",
                        },
                      },
                      {
                        "String": {
                          "sval": "num",
                        },
                      },
                    ],
                    "ctematerialized": "CTEMaterializeDefault",
                    "ctename": "str",
                    "ctequery": {
                      "SelectStmt": {
                        "fromClause": [
                          {
                            "RangeFunction": {
                              "alias": {
                                "aliasname": "a",
                                "colnames": [
                                  {
                                    "String": {
                                      "sval": "s",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "num",
                                    },
                                  },
                                ],
                              },
                              "functions": [
                                {
                                  "List": {
                                    "items": [
                                      {
                                        "FuncCall": {
                                          "args": [
                                            {
                                              "TypeCast": {
                                                "arg": {
                                                  "A_Const": {
                                                    "location": 75,
                                                    "sval": {
                                                      "sval": "{"", "a", "ab", "abc", "abcd", "b", "A", "AB", "ABC", "ABc", "ABcD", "B"}",
                                                    },
                                                  },
                                                },
                                                "location": 150,
                                                "typeName": {
                                                  "arrayBounds": [
                                                    {
                                                      "Integer": {},
                                                    },
                                                  ],
                                                  "location": 152,
                                                  "names": [
                                                    {
                                                      "String": {
                                                        "sval": "text",
                                                      },
                                                    },
                                                  ],
                                                  "typemod": -1,
                                                },
                                              },
                                            },
                                          ],
                                          "funcformat": "COERCE_EXPLICIT_CALL",
                                          "funcname": [
                                            {
                                              "String": {
                                                "sval": "unnest",
                                              },
                                            },
                                          ],
                                          "location": 68,
                                        },
                                      },
                                      {},
                                    ],
                                  },
                                },
                              ],
                              "ordinality": true,
                            },
                          },
                        ],
                        "limitOption": "LIMIT_OPTION_DEFAULT",
                        "op": "SETOP_NONE",
                        "targetList": [
                          {
                            "ResTarget": {
                              "location": 30,
                              "val": {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "location": 49,
                                        "sval": {
                                          "sval": "s",
                                        },
                                      },
                                    },
                                    {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "s",
                                            },
                                          },
                                        ],
                                        "location": 54,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "jsonb_build_object",
                                      },
                                    },
                                  ],
                                  "location": 30,
                                },
                              },
                            },
                          },
                          {
                            "ResTarget": {
                              "location": 58,
                              "val": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "num",
                                      },
                                    },
                                  ],
                                  "location": 58,
                                },
                              },
                            },
                          },
                        ],
                      },
                    },
                    "location": 5,
                  },
                },
              ],
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
